[package]
name = "rust-simple-db"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.3" # Or the latest version
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-lite = "1.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-bunyan-formatter = "0.3"
tracing-appender = "0.2"
log = "0.4.22"